--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,5 @@
-<h1>Pages#home</h1>
+<h1>Home Page</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
+
+<%= link_to "Log In", new_user_session_path(@user) %>
+<%= link_to "Sign Up", new_user_registration_path(@user) %>
