--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,5 @@
 <h2>Sign up</h2>
+<%= link_to "return", root_path %>
 
 <div class="form-check form-switch">
   <input class="form-check-input" type="checkbox" id="flexSwitchCheckChecked" checked>
@@ -10,22 +11,13 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.input :name,
-                required: true,
-                autofocus: true,
-                input_html: { autocomplete: "name" }%>
-    <%= f.input :address,
-                required: true,
-                autofocus: true,
-                input_html: { autocomplete: "address" }%>
+    <%= f.input :name %>
+    <%= f.input :address %>
     <%= f.input :email,
                 required: true,
                 autofocus: true,
                 input_html: { autocomplete: "email" }%>
-    <%= f.input :phone,
-                required: true,
-                autofocus: true,
-                input_html: { autocomplete: "phone" }%>
+    <%= f.input :phone %>
     <%= f.input :password,
                 required: true,
                 hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
@@ -33,6 +25,7 @@
     <%= f.input :password_confirmation,
                 required: true,
                 input_html: { autocomplete: "new-password" } %>
+    <%= f.input :is_seller %>
   </div>
 
   <div class="form-actions">
