--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,13 @@
 <h1>Home Page</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
 
-<%= link_to "Log In", new_user_session_path(@user) %>
+  <div class="cards">
+    <% @restaurants.each do |restaurant| %>
+    <%= restaurant.name %>
+    <% end %>
+  </div>
+
+
+<%= link_to "Log In", user_session_path(@user) %>
 <%= link_to "Sign Up", new_user_registration_path(@user) %>
+<%= button_to "Log Out", destroy_user_session_path, method: :delete  %>
