--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,11 +1,13 @@
-<h1>There's always something for you</h1>
-<h2>Let's explore some options</h2>
-<p><%= link_to "Add a restaurant", new_restaurant_path(@restaurant) <p>
+<h1>Welcome to your restaurant page</h1>
+<h2>Let's add some restaurants</h2>
+<p><%= link_to "Add a restaurant", new_restaurant_path(@restaurant) %></p>
 
-<div class="cards">
-  <% @restaurants.each do |restaurant| %>
-    <%= link_to restaurant.category, restaurant_path(@restaurant) %>
-  <% end %>
-</div>
+  <div class="cards">
+    <% @restaurants.each do |restaurant| %>
+    <%= restaurant.name %>
+    <% end %>
+  </div>
 
-<%= link_to "New restaurant", new_restaurant_path if policy(Restaurant).new? %>
+<%= button_to "Log Out", destroy_user_session_path, method: :delete  %>
+<%= link_to "Home page", root_path  %>
+<%= link_to "Delete", list_path, data: {turbo_method: :delete, turbo_confirm: "Are you sure?"} %>
