--- a/app/assets/stylesheets/components/_location.scss
+++ b/app/assets/stylesheets/components/_location.scss
@@ -1,24 +1,43 @@
 .location-container {
   background-color: #fff;
-  width: 360px;
+  width: auto;
   height: 400px;
   margin: auto;
   position: relative;
   padding: 48px 24px 24px;
   border: 1px solid #E5E9f0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.location-bar {
-  position: absolute;
+// .location-bar {
+//   // position: absolute;
+//   bottom: 10;
+//   width: 400px;
+//   height: 48px;
+//   padding: 6px 48px;
+// }
+
+.search-dish {
+  // position: absolute;
   bottom: 10;
-  width: 310px;
+  width: 1000px;
   height: 48px;
   padding: 6px 48px;
 }
 
+// .input-group {
+//   // position: absolute;
+//   bottom: 10;
+//   width: 1000px;
+//   height: 48px;
+//   padding: 6px 48px;
+// }
+
 .location-description {
-  height: 144px;
-  width: 310px;
+  height: 80px;
+  width: 400px;
   p {
     font-size: 24px;
     font-family: Open-Sans;
@@ -28,7 +47,7 @@
 
 .location-greeting {
   height: 28px;
-  width: 310px;
+  width: 400px;
   p {
     font-size: 20px;
     font-family: Open-Sans;
@@ -36,6 +55,8 @@
 }
 
 .btn-success {
-  position: absolute;
+  // position: absolute;
   bottom: 0;
+  // margin-bottom: 10px;
+  height: 48px;
 }
