--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,18 +1,59 @@
-<%= render "shared/navbar" %>
-<p>Find me in app/views/pages/home.html.erb</p>
-<div class="location-container">
-  <div class="location-greeting">
-    <p>Good Evening</p>
-  </div>
-  <div class="location-description">
-    <p>Let's explore good food around you</p>
-  </div>
-  <input type="text" class="location-bar" placeholder="Search location">
-  <br>
-  <button type="button" class="btn btn-success">Success</button>
-</div>
+  <!DOCTYPE html>
+<html lang="en">
+
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Bootstrap 5 Search Example</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  </head>
+
+
+  <%= render "shared/navbar" %>
+  <p>Find me in app/views/pages/home.html.erb</p>
+  <div class="location-container">
+    <div class="location-greeting">
+      <p>Good Evening</p>
+    </div>
+    <div class="location-description">
+      <p>Let's explore good food around you</p>
+    </div>
+    <%# <div class="search-bar">
+      <input type="text" class="location-bar" placeholder="Search location">
+      <button type="button" class="btn btn-success">Success</button>
+    </div> %>
+    <div class="search-bar">
+      <input type="text" class="search-dish" placeholder="search for dish or a restaurant">
+      <button type="button" class="btn btn-success">Search</button>
+    </div>
+
+
+<%# <div class="d-flex align-items-center p10">
+  <form class="d-flex">
+    <input class="form-control me-1" type="search" placeholder="search for dish or a restaurant" aria-label="Search">
+    <button class="btn btn-primary" type="submit">Search</button>
+  </form>
+</div> %>
+
 
  <div class="cards">
+  <style>
+    h1 {text-align: center;}</style>
+    <h1>Available Restaurants in <%= @restaurants.first.user.address %></h1>
+  <div class="all-restaurant d-flex gap-2 justify-content-center">
+      <% @restaurants.each do |restaurant|%>
+      <div class="border p-3 border-success" >
+        <div><%= image_tag "fish.jpg" %></div>
+        <p>Name: <%= link_to restaurant.name, restaurant_path(restaurant) %></p>
+        <p>Category: <%= restaurant.category %></p>
+        <p>Location <%= restaurant.location %></p>
+        <p>Opening Hour <%= restaurant.opening_hour %></p>
+        <p>Closing Hour <%= restaurant.closing_hour %></p>
+      </div>
+      <% end %>
+  </div>
  </div>
 
 <%= link_to "Log In", user_session_path(@user) %>
