--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -10,3 +10,36 @@
     font-weight: bold;
   }
 }
+
+.targetcards {
+  margin: 10px;
+}
+.cards {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.card {
+  width: 260px;
+  height: 440px;
+  justify-content: top;
+  border-radius: 4px;
+  border: 1px solid #bfbfbf;
+}
+
+.card-img {
+  width: 100%;
+}
+
+.card-img img {
+  object-fit: cover;
+  width: 100%;
+  margin-bottom: 10px;
+}
+
+.description {
+  width: 220px;
+  height: 140px;
+  font-size: 12px;
+}
