--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,26 +1,37 @@
-<% if policy(@restaurant).edit? %>
-  <%= link_to "Edit this restaurant", edit_restaurant_path(@restaurant) %> |
-<% end %>
-<!-- [...] -->
-<%= button_to "Destroy this restaurant", @restaurant, method: :delete if policy(@restaurant).destroy? %>
-
-
-<div class="card-category">
-  <div class="item">
-    <%= @restaurant.photo.key? ? cl_image_tag(@restaurant.photo.key) : cl_image_tag("d6igzbqo8kp2n8kxuvgzknhs1z6o", width: 100, height: 100, crop: :fill) %>
+<%# navigation bar %>
+<nav class="navbar navbar-expand-lg navbar-light bg-white">
+  <div class="container-fluid d-flex justify-content-end">
+    <a class="navbar-brand" href="#"></a>
+    <%# <%= image_tag "https://images.gmanews.tv/webpics/2019/06/Grab_Food_2019_06_20_01_45_58.jpg" %>
+    <%= link_to 'Log in', new_user_session_path, class: "btn btn-outline-success my-2 my-sm-0 ms-2" %>
+    <%= link_to 'Sign up', new_user_registration_path, class: "btn btn-outline-success my-2 my-sm-0 ms-2" %>
   </div>
-  <div class= "item">
-  <%= @restaurant.photo.key? ? cl_image_tag(@restaurant.photo.key) : cl_image_tag("d6igzbqo8kp2n8kxuvgzknhs1z6o", width: 100, height: 100, crop: :fill) %>
+</nav>
+
+<%# restaurant banner details %>
+<div class="banner">
+  <div class="header">
+    <p><%= link_to 'Home', root_path, class: "text-decoration-none"  %> > <%= @restaurant.name %></p>
+    <div class="restaurant-details">
+      <h1><%= @restaurant.name %></h1>
+      <p>Location: <%= @restaurant.location %></p>
+      <p>Category: <%= @restaurant.category %></p>
+    </div>
   </div>
 </div>
 
-
-
-<%# <%= @restaurant.photo.key? ? cl_image_tag(@restaurant.photo.key) : cl_image_tag("d6igzbqo8kp2n8kxuvgzknhs1z6o",
-      width: 100, height: 100, crop: :fill) %>
-
-<%= @restaurant.photo.key? ? cl_image_tag(@restaurant.photo.key) : cl_image_tag("d6igzbqo8kp2n8kxuvgzknhs1z6o",
-      width: 100, height: 100, crop: :fill) %> %>
-
-<%= @restaurant.items.first.photo.key? ? cl_image_tag(@restaurant.items.first.photo.key) : cl_image_tag("d6igzbqo8kp2n8kxuvgzknhs1z6o",
-      width: 50, height: 50, crop: :fill) %> %>
+<%# item cards %>
+<div class="d-flex">
+  <% @restaurant.items.each do |item| %>
+    <div class="targetcards">
+      <div class="cards d-flex gap-4 justify-content-center">
+        <div class="card boader p-3 border-success">
+          <div class="card-img"><%= image_tag "fish.jpg" %></div>
+          <div class="text-center"><h4><%= item.name %></h4></div>
+          <div class="description"><p><%= item.description %></p></div>
+          <div class="price"><p>$<%= item.price %></p></div>
+        </div>
+      </div>
+    </div>
+  <% end %>
+</div>
