--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -4,7 +4,7 @@
 <!-- [...] -->
 <%= button_to "Destroy this restaurant", @restaurant, method: :delete if policy(@restaurant).destroy? %>
 
-
+<% raise %>
 <div class="card-category">
   <div class="item">
     <%= @restaurant.photo.key? ? cl_image_tag(@restaurant.photo.key) : cl_image_tag("d6igzbqo8kp2n8kxuvgzknhs1z6o", width: 100, height: 100, crop: :fill) %>
