--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,5 +1,5 @@
 <%# navigation bar %>
-<nav class="navbar navbar-expand-lg navbar-light bg-white">
+<nav class="navbar navbar-expand-lg navbar-white bg-white">
   <div class="container-fluid d-flex justify-content-end">
     <a class="navbar-brand" href="#"></a>
     <%# <%= image_tag "https://images.gmanews.tv/webpics/2019/06/Grab_Food_2019_06_20_01_45_58.jpg" %>
@@ -21,7 +21,7 @@
 </div>
 
 <%# item cards %>
-<div class="d-flex">
+<div class="d-flex justify-content-center">
   <% @restaurant.items.each do |item| %>
     <div class="targetcards">
       <div class="cards d-flex gap-4 justify-content-center">
