--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
   </head>
-  
+
   <%= render "shared/navbar" %>
   <p>Find me in app/views/pages/home.html.erb</p>
   <div class="location-container">
@@ -36,7 +36,7 @@
   </form>
 </div> %>
 
- <div class="cards">
+ <div class="cards2">
   <style>
     h1 {text-align: center;}</style>
     <h1>Available Restaurants in <%= @restaurants.first.user.address %></h1>
