--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,5 +1,6 @@
 <h1>Welcome to your restaurant page</h1>
 <h2>Let's add some restaurants</h2>
+<%= button_to "Log Out", destroy_user_session_path, method: :delete  %>
 <p><%= link_to "Add a restaurant", new_restaurant_path(@restaurant) %></p>
 
 <% @restaurants.each do |restaurant| %>
