--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -1,4 +1,4 @@
-<h1>Add a new restaurant</h1>
+<h1>Let's create your restaurant</h1>
 <%= simple_form_for(@restaurant) do |f| %>
   <%= f.input :name %>
   <%= f.input :location %>
