--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,9 +9,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
   </head>
-  
+
   <%= render "shared/navbar" %>
-  <p>Find me in app/views/pages/home.html.erb</p>
   <div class="location-container">
     <div class="location-greeting">
       <p>Good Evening</p>
@@ -36,11 +35,10 @@
   </form>
 </div> %>
 
- <div class="cards">
-  <style>
-    h1 {text-align: center;}</style>
+ <div class="cards2">
+
     <h1>Available Restaurants in <%= @restaurants.first.user.address %></h1>
-  <div class="all-restaurant d-flex gap-2 justify-content-center">
+  <div class="flex-wrap all-restaurant d-flex gap-2 justify-content-center">
       <% @restaurants.each do |restaurant|%>
       <div class="border p-3 border-success" >
         <div><%= image_tag "fish.jpg" %></div>
