--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -14,15 +14,19 @@
 .targetcards {
   margin: 10px;
 }
+
 .cards {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
+.cards:hover {
+}
+
 .card {
   width: 260px;
-  height: 440px;
+  height: 460px;
   justify-content: top;
   border-radius: 4px;
   border: 1px solid #bfbfbf;
@@ -43,4 +47,3 @@
   height: 140px;
   font-size: 12px;
 }
-
