edited some code on search bar

--- a/app/assets/stylesheets/components/_location.scss
+++ b/app/assets/stylesheets/components/_location.scss
@@ -19,6 +19,14 @@
 //   padding: 6px 48px;
 // }
 
+.search-bar {
+  width: 50%;
+}
+
+.search-button{
+  margin-left: 20px;
+}
+
 .search-dish {
   // position: absolute;
   bottom: 10;
