--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -36,14 +36,14 @@
   </form>
 </div> %>
 
-<%= form_with url: restaurants_path, method: :get, class: "d-flex" do %>
+<%= form_with url: restaurants_path, method: :get, class: "d-flex search-bar" do %>
   <%= text_field_tag :query,
     params[:query],
     class: "form-control",
     placeholder: "Find food, dish or restaurant"
   %>
-  <%= submit_tag "Search", class: "btn btn-success" %>
-<% end %>
+  <%= submit_tag "Search", class: "btn btn-success search-button" %>
+  <% end %>
 <br>
 
  <div class="cards2">
