--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,14 +1,3 @@
-<%# navigation bar %>
-<%= button_to "Log Out", destroy_user_session_path, method: :delete  %>
-
-<nav class="navbar navbar-expand-lg navbar-white bg-white">
-  <div class="container-fluid d-flex justify-content-end">
-    <a class="navbar-brand" href="#"></a>
-    <%# <%= image_tag "https://images.gmanews.tv/webpics/2019/06/Grab_Food_2019_06_20_01_45_58.jpg" %>
-    <%= link_to "Log out" %>
-  </div>
-</nav>
-
 <%# restaurant banner details %>
 <div class="banner">
   <div class="header">
@@ -32,7 +21,7 @@
           <div class="description"><p><%= item.description %></p></div>
           <div class="price"><p>$<%= item.price %></p></div>
           <%= simple_form_for [@order, @order_item] do |f| %>
-            <%= f.input :quantity %>
+            <%= f.input :quantity, input_html: { min: 0 } %>
             <%= f.input :restaurant_id, :as => :hidden, :input_html => { :value => @restaurant.id } %>
             <%= f.input :item_id, :as => :hidden, :input_html => { :value => item.id } %>
             <%= f.submit "Submit review", class: "btn btn-primary" %>
@@ -41,4 +30,5 @@
       </div>
     </div>
   <% end %>
+  <%= link_to "View Confirmation", order_path(@order) %>
 </div>
