edited on the margin to be narrower on the list of items

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -14,3 +14,13 @@
 .notice {
   margin: 0 !important;
 }
+
+.nav-item {
+  margin: 10px;
+}
+
+.front-body {
+margin-left: 300px;
+margin-right: 300px;
+
+}
