--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -49,7 +49,7 @@
  <div class="cards2">
 
     <h1>Available Restaurants in <%= @restaurants.first.user.address %></h1>
-  <div class="flex-wrap all-restaurant d-flex gap-2 justify-content-center">
+  <div class="flex-wrap all-restaurant d-flex gap-2 justify-content-center front-body">
       <% @restaurants.each do |restaurant|%>
       <div class="border p-3 border-success" >
         <div><%= image_tag "fish.jpg" %></div>
