--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -31,10 +31,10 @@
           </li>
         <% else %>
           <li class="nav-item">
-            <%= link_to "Login", new_user_session_path, class: "nav-link" %>
+            <%= link_to "Login", new_user_session_path, class: " btn btn-outline-success" %>
           </li>
           <li class="nav-item">
-            <%= link_to "Signup", new_user_registration_path, class: "nav-link" %>
+            <%= link_to "Signup", new_user_registration_path, class: " btn btn-outline-success" %>
           </li>
         <% end %>
       </ul>
