--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,9 +1,9 @@
 .banner {
   background-color: white;
-  height: 300px;
+  height: 280px;
   width: 100%;
   margin: 0 auto;
-  box-shadow: 0 0 10px 0 #aaaaaa;
+  box-shadow: 0 0 10px 0 #7c7c7c;
   .header {
     margin: 0 16px;
     padding: 50px;
