--- a/app/assets/stylesheets/components/_login.scss
+++ b/app/assets/stylesheets/components/_login.scss
@@ -1,16 +1,14 @@
 body {
   width: 100vw;
   height: 100vh;
-
 }
 
 .big-container {
-  border: 1px solid green;
+  background-color: white;
   height: 600px;
   width: 500px;
   margin: auto;
   padding: auto;
-
 }
 
 .container1 {
@@ -18,15 +16,11 @@ body {
   margin: auto;
 }
 
-h1 {
-  margin-top: 70px
-}
-
 .form-actions1 {
-  border: 1px solid #2DC500;
+  border: 1px solid #2dc500;
   width: 150px;
   border-radius: 30px;
-  background-color: #2DC500;
+  background-color: #2dc500;
   margin-bottom: 20px;
   text-align: center;
 }
@@ -36,10 +30,8 @@ h1 {
     border-radius: 10px;
   }
   label {
-
   }
 }
-
 
 .submit {
   font-weight: bolder;
@@ -57,18 +49,16 @@ a {
   text-align: center;
 }
 
-
 /* SIGN UP PAGE */
 
-
 .form-actions2 {
-  border: 1px solid #2DC500;
+  border: 1px solid #2dc500;
   width: 100px;
   border-radius: 30px;
-  background-color: #2DC500;
+  background-color: #2dc500;
   margin-bottom: 20px;
   text-align: center;
-  margin-left:auto;
+  margin-left: auto;
   margin-right: auto;
 }
 
@@ -77,7 +67,6 @@ a {
   color: white;
   border: none;
   text-align: center;
-
 }
 
 .form-inputs {
@@ -87,26 +76,29 @@ a {
   margin-bottom: 10px;
 
   input {
-  border-radius: 10px;
-       }
+    border-radius: 10px;
+  }
 }
 
 .link {
   text-align: center;
 }
 
-
 h1 {
   position: relative;
-  bottom: 5px
+  bottom: 5px;
 }
 
 h2 {
-  color: #00B24F;
+  color: #00b24f;
   margin-bottom: 10px;
 }
 
-.main-conntainer {
+h3 {
+  color: #00b24f;
+}
+
+.main-container {
   position: relative;
 }
 
@@ -114,12 +106,12 @@ h2 {
   position: absolute;
   top: 10px;
   text-align: center;
-  left: 50%
+  left: 50%;
 }
 
 .navbar-signup {
   display: flex;
   justify-content: left;
   width: 50px;
-  margin-right: 300px
+  margin-right: 300px;
 }
