finished the seller functionalities

--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,13 +1,5 @@
-<%# navigation bar %>
-<%= button_to "Log Out", destroy_user_session_path, method: :delete  %>
+<h1>BUYER SHOW PAGE </h1>
 
-<nav class="navbar navbar-expand-lg navbar-white bg-white">
-  <div class="container-fluid d-flex justify-content-end">
-    <a class="navbar-brand" href="#"></a>
-    <%# <%= image_tag "https://images.gmanews.tv/webpics/2019/06/Grab_Food_2019_06_20_01_45_58.jpg" %>
-    <%= link_to "Log out" %>
-  </div>
-</nav>
 
 <%# restaurant banner details %>
 <div class="banner">
