--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,31 +1,27 @@
+<%# dashboard header %>
+<div class="dashboard">
+  <div class="restaurant-header w-100 d-flex align-items-center justify-content-center shadow-lg" style="height: 200px; background-color: white">
+    <h1>Food Dashboard</h1>
+  </div>
+</div>
 
-
-<h1>Restaurant Owner SHOW PAGE</h1>
-
- <%= @restaurant.name %>
-<%= @restaurant.location %>
-
-<h2>Show all food item here</h2>
-
-
-<%= link_to "Create a food item", new_restaurant_item_path(@restaurant, @item) %>
-
+<%# restaurant items %>
 <div class="restaurant-items">
   <div class="target-items row gap-3 pt-3 justify-content-center text-center">
-    <% @restaurant.items.each do |item| %>
-        <%# <% restaurant.items.each do |item| %>
+    <% @restaurants.each do |restaurant| %>
+        <% restaurant.items.each do |item| %>
           <div class="card boader p-3 border-success col-6 col-md-4 col-lg-3">
             <div class="card-img"><%= image_tag "fish.jpg" %></div>
             <h4 class="name"><%= item.name %></h4>
             <p class="description"><%= item.description %></p>
             <p class="price">$<%= item.price %></p>
-            <%= link_to "edit", edit_restaurant_item_path(item)%>
-            <%= link_to "delete", data: {turbo_method: :delete, turbo_confirm: "Are you sure?" } %>
+            <%= link_to "edit", edit_restaurant_item_path(restaurant, item)%>
           </div>
+        <% end %>
     <% end %>
   </div>
 </div>
 
-
+<%# edit, patch, destroy item %>
 
 <%= button_to "Log Out", destroy_user_session_path, method: :delete  %>
