--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
   </head>
 
   <body>
+  <%= button_to "Log Out", destroy_user_session_path, method: :delete  %>
 
 
     <%= render "shared/navbar" %>
