--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,27 +1,11 @@
-<%# dashboard header %>
-<div class="dashboard">
-  <div class="restaurant-header w-100 d-flex align-items-center justify-content-center shadow-lg" style="height: 200px; background-color: white">
-    <h1>Food Dashboard</h1>
-  </div>
-</div>
+<h1> Your Dashboard </h1>
+<p>Here is where you see all of your restaurants </p>
 
-<%# restaurant items %>
-<div class="restaurant-items">
-  <div class="target-items row gap-3 pt-3 justify-content-center text-center">
-    <% @restaurants.each do |restaurant| %>
-        <% restaurant.items.each do |item| %>
-          <div class="card boader p-3 border-success col-6 col-md-4 col-lg-3">
-            <div class="card-img"><%= image_tag "fish.jpg" %></div>
-            <h4 class="name"><%= item.name %></h4>
-            <p class="description"><%= item.description %></p>
-            <p class="price">$<%= item.price %></p>
-            <%= link_to "Edit", edit_restaurant_path(restaurant), class: "text-decoration-none" %><%= link_to "Delete", root_path, data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}, class: "text-decoration-none" %>
-          </div>
-        <% end %>
-    <% end %>
-  </div>
-</div>
 
-<%# edit, patch, destroy item %>
+<%= link_to "Create A Restaurant!", new_restaurant_path(@restaurant) %>
 
-<%= button_to "Log Out", destroy_user_session_path, method: :delete  %>
+<% @restaurants.each do |restaurant| %>
+  <%= link_to restaurant.name, restaurant_path(restaurant) %>
+  <%= restaurant.location %>
+  <%= restaurant.category %>
+<% end %>
