--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -21,10 +21,10 @@
           <div class="description"><p><%= item.description %></p></div>
           <div class="price"><p>$<%= item.price %></p></div>
           <%= simple_form_for [@order, @order_item] do |f| %>
-            <%= f.input :quantity, input_html: { min: 0 } %>
+            <%= f.input :quantity, input_html: { min: 0, value:  } %>
             <%= f.input :restaurant_id, :as => :hidden, :input_html => { :value => @restaurant.id } %>
             <%= f.input :item_id, :as => :hidden, :input_html => { :value => item.id } %>
-            <%= f.submit "Submit review", class: "btn btn-primary" %>
+            <%= f.submit "Add To Order", class: "btn btn-primary" %>
           <% end %>
         </div>
       </div>
