--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -22,6 +22,12 @@
         <p>Delivery date: <%= @order.delivery_date %></p>
         <p>Delivery time: <%= Time.now %> </p>
       </div>
+
+      <% @order.order_items.each do |order_item| %>
+        <div>
+          Name: <%= order_item.item.name %> | Quantity: <%= order_item.quantity %>
+        </div>
+      <% end %>
 <%# sum = 0 %>
 <%# total_amt_per_item = order.order_item.items.each |item_price|
 sum = item_price * quantity
