--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -36,11 +36,11 @@
   </form>
 </div> %>
 
-<%= form_with url: restaurants_path, method: :get, class: "d-flex search-bar" do %>
+<%= form_with url: root_path, method: :get, class: "d-flex search-bar" do %>
   <%= text_field_tag :query,
     params[:query],
     class: "form-control",
-    placeholder: "Find food, dish or restaurant"
+    placeholder: "Find Your Favourite Restaurant, Cuisine and Dish"
   %>
   <%= submit_tag "Search", class: "btn btn-success search-button" %>
   <% end %>
@@ -48,7 +48,7 @@
 
  <div class="cards2">
 
-    <h1>Available Restaurants in <%= @restaurants.first.user.address %></h1>
+    <h1><%#Available Restaurants in <%= @user.address %></h1>
   <div class="flex-wrap all-restaurant d-flex gap-2 justify-content-center front-body">
       <% @restaurants.each do |restaurant|%>
       <div class="border p-3 border-success" >
