bootstrap grid restaurants/show

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -15,32 +15,32 @@
   margin: 10px;
 }
 
-.cards {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
+//.card {
+  //display: flex;
+  //justify-content: center;
+  //align-items: center;
+//}
 
-.cards:hover {
-}
+//.card:hover {
+//}
 
-.card {
-  width: 260px;
-  height: 540px;
-  justify-content: top;
-  border-radius: 4px;
-  border: 1px solid #bfbfbf;
-}
+//.cards {
+  //width: 260px;
+  //height: 540px;
+  //justify-content: top;
+  ///border-radius: 4px;
+  //border: 1px solid #bfbfbf;
+//}
 
-.card-img {
-  width: 100%;
-}
+//.cards-img {
+  //width: 100%;
+//}
 
-.card-img img {
-  object-fit: cover;
-  width: 100%;
-  margin-bottom: 10px;
-}
+//.cards-img img {
+  //object-fit: cover;
+  //width: 100%;
+  //margin-bottom: 10px;
+//}
 
 .description {
   width: 220px;
