--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,7 +1,7 @@
 <%# dashboard header %>
 <div class="dashboard">
   <div class="restaurant-header w-100 d-flex align-items-center justify-content-center shadow-lg" style="height: 200px; background-color: white">
-    <h1>Food Dashboard</h1>
+    <h1>What is this page?? Food Dashboard</h1>
   </div>
 </div>
 
@@ -24,4 +24,4 @@
 
 <%# edit, patch, destroy item %>
 
-<%= button_to "Log Out", destroy_user_session_path, method: :delete  %>
+<%# <%= button_to "Log Out", destroy_user_session_path, method: :delete  %>
