--- a/app/assets/stylesheets/components/_location.scss
+++ b/app/assets/stylesheets/components/_location.scss
@@ -5,7 +5,7 @@
   margin: auto;
   position: relative;
   padding: 48px 24px 24px;
-  border: 1px solid #E5E9f0;
+  border: 1px solid #e5e9f0;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -23,7 +23,7 @@
   width: 50%;
 }
 
-.search-button{
+.search-button {
   margin-left: 20px;
 }
 
@@ -70,6 +70,6 @@
 }
 
 h1 {
-  font-size: 20px !important;
+  font-size: 40px !important;
   text-align: center;
 }
