--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,33 @@
 // Specific CSS for your home-page
+// restaurant-seller page
+.dashboard {
+  background-color: white;
+  height: 220px;
+  width: 100%;
+  margin: auto;
+  box-shadow: 0 0 10px 0 #7c7c7c;
+  .restaurant-header {
+    font-family: "Lora", serif;
+    font-family: "Open Sans", sans-serif;
+    // margin: 0 16px;
+    padding: 50px;
+    text-align: center;
+    color: green;
+  }
+}
+
+h1 {
+  font-size: 80px;
+}
+
+.detail {
+  width: 320px;
+  height: 360px;
+  background-color: white;
+  border: 1px solid rgb(116, 255, 116);
+  border-radius: 4px;
+}
+
+.newpage {
+  color: green;
+}
