--- a/app/assets/stylesheets/pages/_password.scss
+++ b/app/assets/stylesheets/pages/_password.scss
@@ -1,6 +1,3 @@
-
-
-
 .main-container {
   border-radius: 5px;
   background-color: white;
@@ -20,10 +17,9 @@
   margin-right: auto;
 }
 
-
 h1 {
   margin-top: 20px;
-  color: #00B24F;
+  color: #00b24f;
   text-align: center;
 }
 
@@ -32,16 +28,14 @@ h1 {
   margin-top: 10px;
 
   :hover {
-    color:#00B24F
+    color: #00b24f;
   }
 }
-
-
 
 .link {
   margin-top: 20px;
   text-align: center;
   :hover {
-    color:#00B24F
+    color: #00b24f;
   }
 }
