--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -1,9 +1,17 @@
-<h1>Let's create your restaurant</h1>
-<%= simple_form_for(@restaurant) do |f| %>
-  <%= f.input :name %>
-  <%= f.input :location %>
-  <%= f.input :category %>
-  <%= f.input :opening_hour %>
-  <%= f.input :closing_hour %>
-  <%= f.submit %>
-<% end %>
+<div class="dashboard">
+  <div class="restaurant-header">
+    <h1><strong>Create your Restaurant Profile</strong></h1>
+    <p><em>We are as excited as you</em></p>
+  </div>
+</div>
+
+<div class="container p-5 rounded mt-3 text-start">
+  <%= simple_form_for(@restaurant) do |f| %>
+    <%= f.input :name %>
+    <%= f.input :location %>
+    <%= f.input :category %>
+    <%= f.input :opening_hour %>
+    <%= f.input :closing_hour %>
+    <%= f.submit %>
+  <% end %>
+</div>
