--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -39,3 +39,13 @@
     </div>
   <% end %>
 </div>
+
+<% if flash.alert %>
+  <div class="alert alert-primary" role="alert">
+    <% flash.each do |type, msg| %>
+      <div>
+        <%= msg %>
+      </div>
+    <% end %>
+  </div>
+<% end %>
